--- a/nginx.conf
+++ b/nginx.conf
@@ -8,12 +8,12 @@ http {
             server localhost:8083;
     }
     resolver localhost;
-    limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
+    # limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
 
     server {
         listen 8080;
         location / {
-            limit_req zone=mylimit;
+            # limit_req zone=mylimit;
             proxy_pass http://backend;
         }
     }
